# rust-shacl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  PROGRESS.md  README.md  SECURITY.md  deny.toml  shacl-rs-functional-spec.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: integration.md
shacl-core/: Cargo.toml
shacl-core/src/: closure.rs  engine.rs  graph.rs  lib.rs  path.rs  recursion.rs  report.rs  validator.rs  values.rs
shacl-core/src/constraints/: cardinality.rs  helpers.rs  list.rs  membership.rs  mod.rs  other.rs  pair.rs  range.rs  shape.rs  string.rs  value_type.rs
shacl-model/: Cargo.toml
shacl-model/src/: lib.rs  path.rs  shape.rs  target.rs  term.rs
shacl-oxigraph/: Cargo.toml
shacl-oxigraph/src/: ingest.rs  lib.rs  mem.rs  store.rs  validate.rs
shacl-oxigraph/tests/: cardinality.rs  engine.rs  fixtures_product_how.ttl  fixtures_product_shapes.ttl  ingest.rs  list.rs  pair.rs  path_eval.rs  product_framework.rs  shape_logic.rs  sparql.rs  string_range_membership.rs
shacl-sparql/: Cargo.toml
shacl-sparql/src/: component.rs  constraint.rs  lib.rs  prebind.rs  prefixes.rs
shacl-testsuite/: Cargo.toml
shacl-testsuite/src/: lib.rs  main.rs
shacl-testsuite/tests/: conformance.rs
shacl-testsuite/tests/fixtures/: node-and-001.ttl  node-class-001.ttl  node-datatype-001.ttl  node-nodeKind-001.ttl  node-not-001.ttl  node-or-001.ttl  node-uniqueValuesFor-001.ttl  node-uniqueValuesFor-002.ttl  property-hasValue-001.ttl  property-maxCount-001.ttl  property-minCount-001.ttl  property-node-001.ttl  property-pattern-001.ttl  property-qualifiedValueShapesDisjoint-001.ttl  property-rootClass-001.ttl  property-singleLine-001.ttl  property-someValue-001.ttl  targets-targetWhere-001.ttl
